z-index fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -74,6 +74,7 @@ $color-third: #f25ea3;
 #hubspot-messages-iframe-container{
   background-color: transparent !important;
   color-scheme : light !important ;
+  z-index: 40;
 }
 
 /*Animación Corazón*/
